
 * 

Features
========

 * Support multiple binary backends in one OBS instance. This means that
   multiple seperate servers can host a defined part of the binary results.

 * The api can be configured to access protect all new created projects by default

 * configuration data which is used by multiple obs parts is stored in /configuration
   path. This is the configuration.xml file in the backend. It contains 
    - enabled scheduler architectures
    - OBS instance name and description

 * kiwi image building understands "obsrepositories:/" as repository. OBS will expand
   the repositories as defined in the local project definition. This allows to move
   around kiwi files without the need to modify them.

Changes on purpose:
===================

 * The scheduler states in /build/_workerstates got moved into a 
   partition structure to support multiple backends running in one instance.

Deprecated:
===========

The following calls have been marked as deprecated, they will get removed in OBS 3.0

 * The /architectures path got obsoleted by the following:
   => Use /configuration to configure the available architectures. This is also
      used by the backend now.
   => Define the used architectures for default targets directly in /distribution

Notes for systems using systemd:
================================

OBS is using init scripts, not systemd style .service files. This will stay until
we will switch from SLES 11 to SLES 12 as default production platform.

openSUSE installations may use systemd (instead of sysvinit) and it should work
in general. Not working are usages like

 # rcobssrcserver status

You will only get the systemd status here.

Also stopping services may not kill all processes, which leads to abstract errors
when trying to restart them. We heard also about trashed MySQL databases when using
systemd.

To avoid these problems you need switch directory to avoid the systemd mapper:

 # cd /etc/init.d
 # ./obssrcserver status|stop|start
